@@ -5,7 +5,7 @@ clean:
 	#rm -f dist_fallback
 	rm -f README.PyDist.html
 
-dist_fallback: sources.list
+dist_fallback:
 	python3 ./generate_fallback_list.py --skip-sensible-names
 
 README.PyDist.html: README.PyDist
