@@ -2,6 +2,7 @@ dh-python (1.20130929-1) UNRELEASED; urgency=low
 
   * Revert python-docutils build dependency change (to avoid circular
     dependencies)
+  * Install PyDist fallback files
 
  -- Piotr Ożarowski <piotr@debian.org>  Sat, 28 Sep 2013 14:51:58 +0200
 
